# sass-rbac-management

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  rbac.sqlite
docs/: ER-DIAGRAM.md  FUNCTIONAL_REQUIREMENTS.md  rbac.dbml
services/rbac-backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
services/rbac-backend/src/: main.py
services/rbac-backend/src/components/access_control/: models.py  repository.py
services/rbac-backend/src/components/audit_log/: models.py
services/rbac-backend/src/components/health/: __init__.py
services/rbac-backend/src/components/organizations/: models.py  repository.py
services/rbac-backend/src/components/users/: models.py  repository.py  schema.py  service.py  views.py
services/rbac-backend/src/core/: __init__.py  db.py  interface.py
services/rbac-backend/src/core/middlewares/logging/: __init__.py  config.py  decorator.py  logger.py
services/rbac-backend/tests/: conftest.py
services/rbac-backend/tests/components/: test_health.py
services/rbac-ui/: package-lock.json  package.json
src/: main.py
src/components/access_control/: models.py  repository.py
src/components/audit_log/: models.py
src/components/health/: __init__.py
src/components/organizations/: models.py  repository.py
src/components/users/: __init__.py  enums.py  models.py  repository.py  schema.py  service.py  views.py
src/core/: db.py
tests/: conftest.py
tests/components/: test_users.py
