[project]
name = "sass-rbac-management"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "celery>=5.4.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.0",
    "sqlalchemy>=2.0.38",
    "structlog>=25.1.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.7",
]

[tool.ruff]
target-version = "py313"

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "I001", # Sort imports
]

fixable = [
    "E711", # Converts '==' to 'is'
    "E712", # Converts '!=' to 'is not'
    "F841", # Removes unused variables
    "F401", # Removes unused imports
    "I001"
]
ignore = [
    "F405", # ignore may be undefined or defined from star imports
    "E722", # ignore blanket except
    "E731", # allow lambda
    "F811", # allow the repo to have unused function
    "F403", # allow import *
    "F821", # allow adding relations to models by wrapping in ""
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
pythonpath = "src"

